feat: add absence management functionality with Ausencia model and repository